track filter added